# spotfishing

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  shell.nix
.github/workflows/: format.yaml  lint.yaml  tests.yaml
spotfishing/: __init__.py  _constants.py  _exceptions.py  _numeric_types.py  _transformation_parameters.py  _types.py  deprecated.py  detection_result.py  detectors.py  dog_transform.py  roi_tools.py
spotfishing_looptrace/: __init__.py  transformation_specification.py
spotfishing_looptrace/examples/: original__difference_of_gaussians.json
tests/: helpers.py  test_accord_with_original_settings.py  test_old_new_equivalence.py  test_spot_detectors.py  test_spot_table_columns.py
tests/spotfishing_looptrace/: test_accord_with_original_settings.py
